--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>SOP_ATV2_JGRP5</title>
 </head>
 <body>
     <h1>Prática 2- SOP</h1>
-    <h2>&#x26c5;</h2>
-    <h2>Atualmente 21° em São Paulo</h2>
-    <h2>13°/23°</h2>
-    <ul>
-        <li>&#x1f327; Amanhã<br></li>
-        <h3>10°/22°</h3>
-        <li>&#x26c5; Sexta-Feira <br></li>
-        <h3>15°/17°</h3>
-        <li>&#9728; Sábado <br></li>
-        <h3>25°/28°</h3>
+    <div>
+        <h2>&#x26c5;</h2>
+        <h2>Atualmente 21° em São Paulo</h2>
+        <h2>13°/23°</h2>
+        <ul>
+            <li>&#x1f327; Amanhã<br></li>
+            <h3>10°/22°</h3>
+            <li>&#x26c5; Sexta-Feira <br></li>
+            <h3>15°/17°</h3>
+            <li>&#9728; Sábado <br></li>
+            <h3>25°/28°</h3>
 
-        
-    </ul>
-    <button>Trocar Cidade</button>
+
+        </ul>
+        <button>Trocar Cidade</button>
+    </div>
 </body>
 </html>
