Criando o arquivo novacidade.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 
         
     </ul>
-    <button>Trocar Cidade</button>
+    <button><a href="novacidade.html">Trocar Cidade</a></button>
 </body>
 </html>
